force-app/main/default/objects/Department__c/Department__c.object-meta.xml
<CustomObject>
    <description>Master data for departments/categories with configurable alert thresholds - 部門・カテゴリマスターデータ（アラート閾値設定可能）</description>
    <label>部門マスター</label>
    <nameField>
        <label>部門名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>部門マスター</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>