force-app/main/default/objects/Department__c/fields/Category_Level__c.field-meta.xml
<CustomField>
    <fullName>Category_Level__c</fullName>
    <label>カテゴリレベル</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
    <inlineHelpText>1=大分類, 2=中分類, 3=小分類</inlineHelpText>
</CustomField>