force-app/main/default/objects/Department__c/fields/Inventory_Days_Max__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Days_Max__c</fullName>
    <defaultValue>7</defaultValue>
    <label>在庫日数最大</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <inlineHelpText>デフォルト: 7日</inlineHelpText>
</CustomField>