force-app/main/default/objects/Department__c/fields/Loss_Rate_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Loss_Rate_Threshold__c</fullName>
    <defaultValue>20</defaultValue>
    <label>ロス率閾値</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
    <inlineHelpText>デフォルト: 20%</inlineHelpText>
</CustomField>