force-app/main/default/objects/Department__c/fields/Parent_Department__c.field-meta.xml
<CustomField>
    <fullName>Parent_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>親部門</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>子部門</relationshipLabel>
    <relationshipName>Child_Departments</relationshipName>
    <type>Lookup</type>
</CustomField>