force-app/main/default/objects/Department__c/fields/Profit_Margin_Min__c.field-meta.xml
<CustomField>
    <fullName>Profit_Margin_Min__c</fullName>
    <defaultValue>20</defaultValue>
    <label>荒利率最低値</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
    <inlineHelpText>デフォルト: 20%</inlineHelpText>
</CustomField>