force-app/main/default/objects/Department__c/fields/Waste_Rate_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Waste_Rate_Threshold__c</fullName>
    <defaultValue>5</defaultValue>
    <label>廃棄率閾値</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
    <inlineHelpText>デフォルト: 5%</inlineHelpText>
</CustomField>