force-app/main/default/objects/Department__c/fields/YoY_Decline_Threshold__c.field-meta.xml
<CustomField>
    <fullName>YoY_Decline_Threshold__c</fullName>
    <defaultValue>-10</defaultValue>
    <label>前年比閾値</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
    <inlineHelpText>デフォルト: -10%</inlineHelpText>
</CustomField>